--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,5 @@ authors = ["Jeremy Soller <jeremy@system76.com>"]
 edition = "2018"
 
 [dependencies]
-redox_uefi = "0.1"
+redox_uefi = { git = "https://gitlab.redox-os.org/tcrawford/uefi.git", branch = "fvb" }
+plain = "0.2"
